Fix wrapping on testimonials section

--- a/css/pages/_home.scss
+++ b/css/pages/_home.scss
@@ -654,6 +654,7 @@
 .community {
   .testimonials {
     @extend %grid-3;
+    flex-wrap: wrap;
     list-style: none;
     font-size: .8rem;
   }
